--- a/css/styles.css
+++ b/css/styles.css
@@ -125,24 +125,163 @@ body {
 }
 
 /*Cities slider*/
+#cities-slider .cities-slider--city {
+  position: relative;
+  text-align: right;
+  color: #fff;
+}
 #cities-slider .cities-slider--city--top {
+  padding: 0 180px;
   min-height: 670px;
   background-position: center;
   background-size: cover;
   display: flex;
   align-items: center;
+  position: relative;
+}
+#cities-slider .cities-slider--city--top .container-fluid {
+  display: flex;
+  justify-content: flex-end;
+}
+#cities-slider .cities-slider--city--top .cities-wrapper {
+  max-width: 50%;
+  text-align: center;
+}
+#cities-slider .cities-slider--city--top .cities-wrapper .cities-slider--city--top__icon {
+  display: inline-block;
+}
+#cities-slider .cities-slider--city--top .cities-wrapper .cities-slider--city--top__icon img {
+  max-height: 105px;
+}
+#cities-slider .cities-slider--city--top .cities-wrapper .cities-slider--city--top__title {
+  font-size: 96px;
+  text-transform: uppercase;
+}
+#cities-slider .cities-slider--city--top .cities-slider--arrows {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 50%;
+}
+#cities-slider .cities-slider--city--top .cities-slider--arrows .arrow {
+  display: inline-block;
+  cursor: pointer;
+}
+#cities-slider .cities-slider--city--top .cities-slider--arrows .arrow-left {
+  float: left;
+}
+#cities-slider .cities-slider--city--top .cities-slider--arrows .arrow-right {
+  float: right;
 }
 #cities-slider .cities-slider--city--bottom {
   background-color: #181818;
   color: #fff;
   padding-top: 100px;
+  max-height: 530px;
 }
 #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card {
   background-color: #262a2b;
   border-radius: 50px;
-  text-align: center;
+  text-align: left;
   padding-top: 50px;
   padding-left: 40px;
+  padding-right: 25px;
+  min-height: 550px;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-inner {
+  background-color: #262a2b;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-inner .card-front-text, #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-inner .card-back-text {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-inner .card-front-text {
+  opacity: 0;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-inner .card-back-text {
+  opacity: 1;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-icon {
+  text-align: center;
+  margin-bottom: 35px;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-icon img {
+  max-height: 105px;
+  display: inline-block;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-title {
+  font-size: 38px;
+  line-height: 45px;
+  font-weight: 500;
+  margin-bottom: 65px;
+  position: relative;
+  z-index: 0;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-title:after {
+  content: "";
+  height: 3px;
+  width: 100px;
+  background-color: #adaeae;
+  position: absolute;
+  left: 0;
+  bottom: -30px;
+  z-index: 1;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-text {
+  font-size: 23px;
+  line-height: 35px;
+  font-weight: 300;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .back-top {
+  padding-bottom: 70px;
+  padding-top: 30px;
+  padding-right: 20px;
+  border-bottom: 5px solid #fff;
+  margin-bottom: 60px;
+  min-height: 205px;
+  max-height: 205px;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .name {
+  display: block;
+  font-size: 19px;
+  line-height: 28px;
+  font-weight: 300;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .frace {
+  font-size: 23px;
+  font-weight: 500;
+  line-height: 32px;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .last {
+  padding-top: 0;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .last .name {
+  display: none;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .last .frace {
+  margin-bottom: 30px;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .last .furnature img {
+  margin-right: 28px;
+  max-height: 45px;
+  display: inline-block;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .last .furnature .room {
+  display: inline-block;
+  font-size: 19px;
+  line-height: 28px;
+  font-weight: 300;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card:hover .card-front-text {
+  opacity: 0;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card:hover .card-back-text {
+  opacity: 1;
 }
 #cities-slider .cities-slider--city .city--new-york {
   background-image: url("../../img/slider-new-york.png");
@@ -155,6 +294,9 @@ body {
 }
 #cities-slider .cities-slider--city .city--others {
   background-image: url("../../img/slider-others.png");
+}
+#cities-slider .cities-footer--logo img {
+  margin: 0 auto;
 }
 
 #travel .travel-panel--icon img {
@@ -767,10 +909,13 @@ body {
   margin-bottom: 40px;
 }
 
-#footer {
+.footer {
   text-align: center;
-  padding-top: 150px;
+  padding-top: 180px;
   padding-bottom: 80px;
+  background-image: url("../../img/footer-bg.png");
+  background-position: center;
+  background-size: cover;
 }
 
 /*# sourceMappingURL=styles.css.map */
