--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -368,6 +368,9 @@ body{
             display: flex;
             align-items: center;
             margin-bottom: 40px;
+            span ul li{
+                font-weight: 500;
+            }
             .col-3{
                 text-align: center;
             }
@@ -549,10 +552,17 @@ body{
     &--mid{
         padding-top: 180px;
         padding-bottom: 40px;
+        background-image: url('../../img/footer-bg.png');
+        background-position: center;
+        background-size: cover;
         .services-panel{
             display: flex;
             align-items: center;
             margin-bottom: 40px;
+            a{
+                font-weight: 500;
+            }
+
             .col-3{
                 text-align: center;
             }
