--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -66,7 +66,7 @@ body{
         position: relative;
         .card-wrapper{
             min-height: 800px;
-            background-image: url('../../img/home-bg2.png');
+            background-image: url('https://jesusquev3311.github.io/master-landing/img/home-bg2.png');
             background-position: center left;
             background-size: cover;
             border-radius: 40px;
@@ -305,16 +305,16 @@ body{
             }
         }
         .city--new-york{
-            background-image: url('../../img/slider-new-york.png');
+            background-image: url('https://jesusquev3311.github.io/master-landing/img/slider-new-york.png');
         }
         .city--miami{
-            background-image: url('../../img/slider-miami.png');
+            background-image: url('https://jesusquev3311.github.io/master-landing/img/slider-miami.png');
         }
         .city--madrid{
-            background-image: url('../../img/slider-madrid.png');
+            background-image: url('https://jesusquev3311.github.io/master-landing/img/slider-madrid.png');
         }
         .city--others{
-            background-image: url('../../img/slider-others.png');
+            background-image: url('https://jesusquev3311.github.io/master-landing/img/slider-others.png');
         }
     }
     .cities-footer--logo{
@@ -530,7 +530,7 @@ body{
         padding-top: 20px;
         .services-banner{
             min-height: 720px;
-            background-image: url("../../img/services-bg.png");
+            background-image: url("https://jesusquev3311.github.io/master-landing/img/services-bg.png");
             background-position: center;
             background-size: cover;
             border-radius: 50px;
@@ -667,7 +667,7 @@ body{
         padding-top: 20px;
         .protection-banner{
             min-height: 720px;
-            background-image: url("../../img/protection.png");
+            background-image: url("https://jesusquev3311.github.io/master-landing/img/protection.png");
             background-position: center;
             background-size: cover;
             border-radius: 50px;
@@ -995,7 +995,7 @@ body{
     text-align: center;
     padding-top: 180px;
     padding-bottom: 80px;
-    background-image: url('../../img/footer-bg.png');
+    background-image: url('https://jesusquev3311.github.io/master-landing//img/footer-bg.png');
     background-position: center;
     background-size: cover;
 }
