--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -849,7 +849,7 @@ body{
         padding-top: 20px;
         .benefits-banner{
             min-height: 720px;
-            background-image: url("../../img/benefits.png");
+            background-image: url("https://jesusquev3311.github.io/master-landing/img/benefits.png");
             background-position: center;
             background-size: cover;
             border-radius: 50px;
