--- a/css/styles.css
+++ b/css/styles.css
@@ -806,7 +806,7 @@ body {
 }
 #benefits--top .benefits-banner {
   min-height: 720px;
-  background-image: url("../../img/benefits.png");
+  background-image: url("https://jesusquev3311.github.io/master-landing/img/benefits.png");
   background-position: center;
   background-size: cover;
   border-radius: 50px;
