--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -342,7 +342,7 @@ body{
         padding-top: 20px;
         .travel-banner{
             min-height: 720px;
-            background-image: url("../../img/travel-banner.png");
+            background-image: url("https://jesusquev3311.github.io/master-landing/img/travel-banner.png");
             background-position: center;
             background-size: cover;
             border-radius: 50px;
@@ -995,7 +995,7 @@ body{
     text-align: center;
     padding-top: 180px;
     padding-bottom: 80px;
-    background-image: url('https://jesusquev3311.github.io/master-landing//img/footer-bg.png');
+    background-image: url('https://jesusquev3311.github.io/master-landing/img/footer-bg.png');
     background-position: center;
     background-size: cover;
 }
