--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -66,7 +66,7 @@ body{
         position: relative;
         .card-wrapper{
             min-height: 800px;
-            background-image: url('https://jesusquev3311.github.io/master-landing/img/home-bg2.png');
+            background-image: url('../../img/home-bg2.png');
             background-position: center left;
             background-size: cover;
             border-radius: 40px;
@@ -81,13 +81,13 @@ body{
                 padding-left: 50px;
                 max-width: 50%;
             }
-            .card-wrapper--texbox--group__title{
+            .card-wrapper--textbox--group__title{
                     font-size: 37px;
                     line-height: 47px;
                     margin-bottom: 40px;
                 
             }
-            .card-wrapper--texbox--group__btn{
+            .card-wrapper--textbox--group__btn{
                 background-color: $main-color;
                 font-size: 24px;
                 padding: 5px 45px;
@@ -998,4 +998,124 @@ body{
     background-image: url('https://jesusquev3311.github.io/master-landing/img/footer-bg.png');
     background-position: center;
     background-size: cover;
+}
+
+/* === Responsive === */
+@media only screen and (max-width: 600px) {
+    body{
+        padding-top: 100px;
+    }
+    .main-header{
+        padding-left: 30px;
+        .container-fluid{
+            padding: 0;
+        }
+        #mobile-btn{
+            background: none;
+            border: none;
+            color: #fff;
+            font-size: 21px;
+            line-height: 31px;
+            cursor: pointer;
+        }
+        img{
+            max-height: 40px;
+            margin-right: 30px;
+        }
+    }
+
+    #home{
+        .container-fluid{padding: 0;}
+        &-top{
+            .card-wrapper{
+                min-height: 550px;
+                max-height: 680px;
+                border-radius: 0;
+                background-position: center right;
+                background-size: 270%;
+                flex-direction: column-reverse;
+                &--textbox{
+                    max-width: 100%;
+                    max-height: 350px;
+                    padding: 0;
+                    text-align: center;
+                    &--group{
+                        padding: 50px 0;
+                        &__title{
+                        font-size: 27px !important;
+                        line-height: 37px !important;
+                        margin-bottom: 20px !important;
+                        }
+                    }
+                }
+            }
+        }
+        &-bottom{
+            .bottom-text--img{
+                margin-bottom: 20px;
+                img{
+                    max-width: 100%;
+                    position: relative;
+                    top: -20px;
+                }
+            }
+            .bottom-text--title, .bottom-text--text{
+                font-size: 26px;
+                line-height: 36px;
+            }
+        }
+    }    
+
+    #cities{
+        .container-fluid{ padding: 0 20px;}
+        #cities-slider .cities-slider--city--top{
+            padding: 0;
+        }
+        #cities-slider .cities-slider--city--top .container-fluid{
+            padding: 0;
+            justify-content: center;
+        }
+        #cities-slider .cities-slider--city--top .cities-wrapper{
+            max-width: 100%;
+        }
+        #cities-slider .cities-slider--city--top .cities-wrapper .cities-slider--city--top__title{
+            font-size: 36px;
+        }
+        #cities-slider .cities-slider--city--top .cities-wrapper .cities-slider--city--top__icon img{
+            max-height: 65px;
+        }
+        #cities-slider .cities-slider--city--top{
+            min-height: 500px;
+        }
+        #cities-slider .cities-slider--city--top .cities-slider--arrows .arrow{
+            max-height: 50px;
+        }
+        #cities-slider .cities-slider--city--bottom{
+            max-height: 100%;
+        }
+        #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-inner .card-back-text{
+            opacity: 1;
+        }
+        #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card{
+            padding: 0 !important;
+            min-height: 360px;
+            text-align: center;
+            margin-bottom: 50px;
+        }
+        #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .back-top{
+            min-height: 0;
+            padding-bottom: 30px;
+            padding-right: 0;
+            margin-bottom: 40px;
+        }
+        #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .last .frace{
+            margin-top: 30px;
+            margin-bottom: 20px;
+            font-size: 22px;
+            line-height: 30px;
+        }
+        #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .last .furnature img{
+            max-height: 30px;
+        }
+    }
 }
