--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ body {
 }
 #home-top .card-wrapper {
   min-height: 800px;
-  background-image: url("https://jesusquev3311.github.io/master-landing/img/home-bg2.png");
+  background-image: url("../../img/home-bg2.png");
   background-position: center left;
   background-size: cover;
   border-radius: 40px;
@@ -81,12 +81,12 @@ body {
   padding-left: 50px;
   max-width: 50%;
 }
-#home-top .card-wrapper .card-wrapper--texbox--group__title {
+#home-top .card-wrapper .card-wrapper--textbox--group__title {
   font-size: 37px;
   line-height: 47px;
   margin-bottom: 40px;
 }
-#home-top .card-wrapper .card-wrapper--texbox--group__btn {
+#home-top .card-wrapper .card-wrapper--textbox--group__btn {
   background-color: #181818;
   font-size: 24px;
   padding: 5px 45px;
@@ -96,7 +96,7 @@ body {
   border-radius: 20px;
   transition: all 0.5s;
 }
-#home-top .card-wrapper .card-wrapper--texbox--group__btn:hover {
+#home-top .card-wrapper .card-wrapper--textbox--group__btn:hover {
   background-color: #3a3a3a;
   border-color: #fff;
 }
@@ -946,6 +946,123 @@ body {
   background-image: url("https://jesusquev3311.github.io/master-landing/img/footer-bg.png");
   background-position: center;
   background-size: cover;
+}
+
+/* === Responsive === */
+@media only screen and (max-width: 600px) {
+  body {
+    padding-top: 100px;
+  }
+
+  .main-header {
+    padding-left: 30px;
+  }
+  .main-header .container-fluid {
+    padding: 0;
+  }
+  .main-header #mobile-btn {
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 21px;
+    line-height: 31px;
+    cursor: pointer;
+  }
+  .main-header img {
+    max-height: 40px;
+    margin-right: 30px;
+  }
+
+  #home .container-fluid {
+    padding: 0;
+  }
+  #home-top .card-wrapper {
+    min-height: 550px;
+    max-height: 680px;
+    border-radius: 0;
+    background-position: center right;
+    background-size: 270%;
+    flex-direction: column-reverse;
+  }
+  #home-top .card-wrapper--textbox {
+    max-width: 100%;
+    max-height: 350px;
+    padding: 0;
+    text-align: center;
+  }
+  #home-top .card-wrapper--textbox--group {
+    padding: 50px 0;
+  }
+  #home-top .card-wrapper--textbox--group__title {
+    font-size: 27px !important;
+    line-height: 37px !important;
+    margin-bottom: 20px !important;
+  }
+  #home-bottom .bottom-text--img {
+    margin-bottom: 20px;
+  }
+  #home-bottom .bottom-text--img img {
+    max-width: 100%;
+    position: relative;
+    top: -20px;
+  }
+  #home-bottom .bottom-text--title, #home-bottom .bottom-text--text {
+    font-size: 26px;
+    line-height: 36px;
+  }
+
+  #cities .container-fluid {
+    padding: 0 20px;
+  }
+  #cities #cities-slider .cities-slider--city--top {
+    padding: 0;
+  }
+  #cities #cities-slider .cities-slider--city--top .container-fluid {
+    padding: 0;
+    justify-content: center;
+  }
+  #cities #cities-slider .cities-slider--city--top .cities-wrapper {
+    max-width: 100%;
+  }
+  #cities #cities-slider .cities-slider--city--top .cities-wrapper .cities-slider--city--top__title {
+    font-size: 36px;
+  }
+  #cities #cities-slider .cities-slider--city--top .cities-wrapper .cities-slider--city--top__icon img {
+    max-height: 65px;
+  }
+  #cities #cities-slider .cities-slider--city--top {
+    min-height: 500px;
+  }
+  #cities #cities-slider .cities-slider--city--top .cities-slider--arrows .arrow {
+    max-height: 50px;
+  }
+  #cities #cities-slider .cities-slider--city--bottom {
+    max-height: 100%;
+  }
+  #cities #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .card-inner .card-back-text {
+    opacity: 1;
+  }
+  #cities #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card {
+    padding: 0 !important;
+    min-height: 360px;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  #cities #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .back-top {
+    min-height: 0;
+    padding-bottom: 30px;
+    padding-right: 0;
+    margin-bottom: 40px;
+  }
+  #cities #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .last .frace {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-size: 22px;
+    line-height: 30px;
+  }
+  #cities #cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card .last .furnature img {
+    max-height: 30px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
