--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -13,6 +13,9 @@ body{
     position: relative;
     padding-top: 143px;
 }
+.collapsing{
+    display: none;
+}
 /*bootstrap clasess rest */
 .container-fluid{
     padding: 0 60px;
