--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@ body {
   padding-top: 143px;
 }
 
+.collapsing {
+  display: none;
+}
+
 /*bootstrap clasess rest */
 .container-fluid {
   padding: 0 60px;
