restoring image remote url

--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -69,7 +69,7 @@ body{
         position: relative;
         .card-wrapper{
             min-height: 800px;
-            background-image: url('../../img/home-bg2.png');
+            background-image: url('https://jesusquev3311.github.io/master-landing/img/home-bg2.png');
             background-position: center left;
             background-size: cover;
             border-radius: 40px;
